--- a/kadai_013/index.html
+++ b/kadai_013/index.html
@@ -31,9 +31,7 @@
       <a class="menu" href="index.html#concept" onclick="document.getElementById('nav-sp').style.display = 'none'">CONSEPT</a>
       <a class="menu" href="index.html#product" onclick="document.getElementById('nav-sp').style.display = 'none'">PRODUCT</a>
       <a class="menu" href="index.html#contact" onclick="document.getElementById('nav-sp').style.display = 'none'">CONTACT</a>
-      
-    </header>
-  
+     </nav>
     </header>
     <main>
       <article>
